Milestone-3/src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    RANGE

Grammar

Rule 0     S' -> start
Rule 1     start -> SourceFile
Rule 2     Type -> TypeName
Rule 3     Type -> TypeLit
Rule 4     Type -> LEFT_PARANTHESIS Type RIGHT_PARANTHESIS
Rule 5     TypeName -> TypeToken
Rule 6     TypeName -> QualifiedIdent
Rule 7     TypeToken -> INT_T
Rule 8     TypeToken -> FLOAT_T
Rule 9     TypeToken -> UINT_T
Rule 10    TypeToken -> COMPLEX_T
Rule 11    TypeToken -> RUNE_T
Rule 12    TypeToken -> BOOL_T
Rule 13    TypeToken -> STRING_T
Rule 14    TypeToken -> TYPE IDENTIFIER
Rule 15    TypeLit -> ArrayType
Rule 16    TypeLit -> StructType
Rule 17    TypeLit -> PointerType
Rule 18    TypeOpt -> Type
Rule 19    TypeOpt -> epsilon
Rule 20    ArrayType -> LEFT_BRACKET ArrayLength RIGHT_BRACKET ElementType
Rule 21    ArrayLength -> I INTEGER
Rule 22    ArrayLength -> I OCTAL
Rule 23    ArrayLength -> I HEX
Rule 24    ArrayLength -> I RUNE
Rule 25    ElementType -> Type
Rule 26    StructType -> CreateFuncScope STRUCT LEFT_BRACES FieldDeclRep RIGHT_BRACES EndScope
Rule 27    FieldDeclRep -> FieldDeclRep FieldDecl SEMICOLON
Rule 28    FieldDeclRep -> epsilon
Rule 29    FieldDecl -> IdentifierList Type
Rule 30    TagOpt -> Tag
Rule 31    TagOpt -> epsilon
Rule 32    Tag -> STRING
Rule 33    PointerType -> MULT BaseType
Rule 34    BaseType -> Type
Rule 35    Signature -> Parameters TypeOpt
Rule 36    ResultOpt -> Result
Rule 37    ResultOpt -> epsilon
Rule 38    Result -> Parameters
Rule 39    Result -> Type
Rule 40    Parameters -> LEFT_PARANTHESIS ParameterListOpt RIGHT_PARANTHESIS
Rule 41    ParameterListOpt -> ParametersList
Rule 42    ParameterListOpt -> epsilon
Rule 43    ParametersList -> ParameterDecl
Rule 44    ParametersList -> ParameterDeclCommaRep
Rule 45    ParameterDeclCommaRep -> ParameterDeclCommaRep COMMA ParameterDecl
Rule 46    ParameterDeclCommaRep -> ParameterDecl COMMA ParameterDecl
Rule 47    ParameterDecl -> IdentifierList Type
Rule 48    ParameterDecl -> Type
Rule 49    Block -> LEFT_BRACES StatementList RIGHT_BRACES
Rule 50    StatementList -> StatementRep
Rule 51    StatementRep -> StatementRep Statement SEMICOLON
Rule 52    StatementRep -> epsilon
Rule 53    Declaration -> ConstDecl
Rule 54    Declaration -> TypeDecl
Rule 55    Declaration -> VarDecl
Rule 56    TopLevelDecl -> Declaration
Rule 57    TopLevelDecl -> FunctionDecl
Rule 58    ConstDecl -> CONST ConstSpec
Rule 59    ConstDecl -> CONST LEFT_PARANTHESIS ConstSpecRep RIGHT_PARANTHESIS
Rule 60    ConstSpecRep -> ConstSpecRep ConstSpec SEMICOLON
Rule 61    ConstSpecRep -> epsilon
Rule 62    ConstSpec -> IdentifierList Type ASSIGN ExpressionList
Rule 63    TypeExprListOpt -> TypeOpt ASSIGN ExpressionList
Rule 64    TypeExprListOpt -> epsilon
Rule 65    IdentifierList -> IDENTIFIER IdentifierRep
Rule 66    IdentifierRep -> IdentifierRep COMMA IDENTIFIER
Rule 67    IdentifierRep -> epsilon
Rule 68    ExpressionList -> Expression ExpressionRep
Rule 69    ExpressionRep -> ExpressionRep COMMA Expression
Rule 70    ExpressionRep -> epsilon
Rule 71    TypeDecl -> TYPE TypeSpec
Rule 72    TypeDecl -> TYPE LEFT_PARANTHESIS TypeSpecRep RIGHT_PARANTHESIS
Rule 73    TypeSpecRep -> TypeSpecRep TypeSpec SEMICOLON
Rule 74    TypeSpecRep -> epsilon
Rule 75    TypeSpec -> TypeDef
Rule 76    AliasDecl -> IDENTIFIER ASSIGN Type
Rule 77    TypeDef -> IDENTIFIER Type
Rule 78    VarDecl -> VAR VarSpec
Rule 79    VarDecl -> VAR LEFT_PARANTHESIS VarSpecRep RIGHT_PARANTHESIS
Rule 80    VarSpecRep -> VarSpecRep VarSpec SEMICOLON
Rule 81    VarSpecRep -> epsilon
Rule 82    VarSpec -> IdentifierList Type ExpressionListOpt
Rule 83    VarSpec -> IdentifierList ASSIGN ExpressionList
Rule 84    ExpressionListOpt -> ASSIGN ExpressionList
Rule 85    ExpressionListOpt -> epsilon
Rule 86    ShortVarDecl -> IDENTIFIER QUICK_ASSIGN Expression
Rule 87    FunctionDecl -> FUNC FunctionName CreateScope Function EndScope
Rule 88    FunctionDecl -> FUNC FunctionName CreateScope Signature EndScope
Rule 89    CreateFuncScope -> <empty>
Rule 90    CreateScope -> <empty>
Rule 91    EndScope -> <empty>
Rule 92    FunctionName -> IDENTIFIER
Rule 93    Function -> Signature FunctionBody
Rule 94    FunctionBody -> Block
Rule 95    Operand -> Literal
Rule 96    Operand -> OperandName
Rule 97    Operand -> LEFT_PARANTHESIS Expression RIGHT_PARANTHESIS
Rule 98    Literal -> BasicLit
Rule 99    BasicLit -> I INTEGER
Rule 100   BasicLit -> I OCTAL
Rule 101   BasicLit -> I HEX
Rule 102   BasicLit -> F FLOAT
Rule 103   BasicLit -> C IMAGINARY
Rule 104   BasicLit -> I RUNE
Rule 105   BasicLit -> S STRING
Rule 106   I -> <empty>
Rule 107   F -> <empty>
Rule 108   C -> <empty>
Rule 109   S -> <empty>
Rule 110   OperandName -> IDENTIFIER
Rule 111   QualifiedIdent -> IDENTIFIER DOT TypeName
Rule 112   PrimaryExpr -> Operand
Rule 113   PrimaryExpr -> PrimaryExpr Selector
Rule 114   PrimaryExpr -> Conversion
Rule 115   PrimaryExpr -> PrimaryExpr LEFT_BRACKET Expression RIGHT_BRACKET
Rule 116   PrimaryExpr -> PrimaryExpr Slice
Rule 117   PrimaryExpr -> PrimaryExpr TypeAssertion
Rule 118   PrimaryExpr -> PrimaryExpr LEFT_PARANTHESIS ExpressionListTypeOpt RIGHT_PARANTHESIS
Rule 119   PrimaryExpr -> MULT PrimaryExpr
Rule 120   Selector -> DOT IDENTIFIER
Rule 121   Index -> LEFT_BRACKET Expression RIGHT_BRACKET
Rule 122   Slice -> LEFT_BRACKET ExpressionOpt COLON ExpressionOpt RIGHT_BRACKET
Rule 123   Slice -> LEFT_BRACKET ExpressionOpt COLON Expression COLON Expression RIGHT_BRACKET
Rule 124   TypeAssertion -> DOT LEFT_PARANTHESIS Type RIGHT_PARANTHESIS
Rule 125   ExpressionListTypeOpt -> ExpressionList
Rule 126   ExpressionListTypeOpt -> epsilon
Rule 127   Expression -> UnaryExpr
Rule 128   Expression -> Expression BinaryOp Expression
Rule 129   ExpressionOpt -> Expression
Rule 130   ExpressionOpt -> epsilon
Rule 131   UnaryExpr -> PrimaryExpr
Rule 132   UnaryExpr -> UnaryOp UnaryExpr
Rule 133   UnaryExpr -> NOT UnaryExpr
Rule 134   BinaryOp -> LOG_OR
Rule 135   BinaryOp -> LOG_AND
Rule 136   BinaryOp -> RelOp
Rule 137   BinaryOp -> AddMulOp
Rule 138   RelOp -> EQ
Rule 139   RelOp -> NEQ
Rule 140   RelOp -> LT
Rule 141   RelOp -> GT
Rule 142   RelOp -> LEQ
Rule 143   RelOp -> GEQ
Rule 144   AddMulOp -> UnaryOp
Rule 145   AddMulOp -> OR
Rule 146   AddMulOp -> XOR
Rule 147   AddMulOp -> DIV
Rule 148   AddMulOp -> MOD
Rule 149   AddMulOp -> LSHIFT
Rule 150   AddMulOp -> RSHIFT
Rule 151   UnaryOp -> ADD
Rule 152   UnaryOp -> SUB
Rule 153   UnaryOp -> MULT
Rule 154   UnaryOp -> AND
Rule 155   Conversion -> TYPECAST Type LEFT_PARANTHESIS Expression RIGHT_PARANTHESIS
Rule 156   Statement -> Declaration
Rule 157   Statement -> LabeledStmt
Rule 158   Statement -> SimpleStmt
Rule 159   Statement -> ReturnStmt
Rule 160   Statement -> CreateScope Block EndScope
Rule 161   Statement -> ScanStmt
Rule 162   Statement -> BreakStmt
Rule 163   Statement -> ContinueStmt
Rule 164   Statement -> GotoStmt
Rule 165   Statement -> PrintStmt
Rule 166   Statement -> IfStmt
Rule 167   Statement -> SwitchStmt
Rule 168   Statement -> MallocStmt
Rule 169   Statement -> ForStmt
Rule 170   PrintStmt -> PRINT Expression
Rule 171   ScanStmt -> SCAN Expression
Rule 172   MallocStmt -> MALLOC LEFT_PARANTHESIS Expression COMMA Expression RIGHT_PARANTHESIS
Rule 173   SimpleStmt -> epsilon
Rule 174   SimpleStmt -> ExpressionStmt
Rule 175   SimpleStmt -> IncDecStmt
Rule 176   SimpleStmt -> Assignment
Rule 177   SimpleStmt -> ShortVarDecl
Rule 178   LabeledStmt -> Label COLON Statement
Rule 179   Label -> IDENTIFIER
Rule 180   ExpressionStmt -> Expression
Rule 181   IncDecStmt -> Expression INC
Rule 182   IncDecStmt -> Expression DEC
Rule 183   Assignment -> ExpressionList assign_op ExpressionList
Rule 184   assign_op -> AssignOp
Rule 185   AssignOp -> PLUS_ASSIGN
Rule 186   AssignOp -> MINUS_ASSIGN
Rule 187   AssignOp -> MULT_ASSIGN
Rule 188   AssignOp -> DIV_ASSIGN
Rule 189   AssignOp -> MOD_ASSIGN
Rule 190   AssignOp -> AND_ASSIGN
Rule 191   AssignOp -> OR_ASSIGN
Rule 192   AssignOp -> XOR_ASSIGN
Rule 193   AssignOp -> LSHIFT_ASSIGN
Rule 194   AssignOp -> RSHIFT_ASSIGN
Rule 195   AssignOp -> ASSIGN
Rule 196   IfStmt -> IF Expression CreateScope Block EndScope ElseOpt
Rule 197   SimpleStmtOpt -> SimpleStmt SEMICOLON
Rule 198   SimpleStmtOpt -> epsilon
Rule 199   ElseOpt -> ELSE IfStmt
Rule 200   ElseOpt -> ELSE CreateScope Block EndScope
Rule 201   ElseOpt -> epsilon
Rule 202   SwitchStmt -> ExprSwitchStmt
Rule 203   SwitchStmt -> TypeSwitchStmt
Rule 204   ExprSwitchStmt -> SWITCH ExpressionOpt LEFT_BRACES ExprCaseClauseRep RIGHT_BRACES
Rule 205   StartSwitch -> <empty>
Rule 206   ExprCaseClauseRep -> ExprCaseClauseRep ExprCaseClause
Rule 207   ExprCaseClauseRep -> epsilon
Rule 208   ExprCaseClause -> ExprSwitchCase COLON StatementList
Rule 209   ExprSwitchCase -> CASE ExpressionList
Rule 210   ExprSwitchCase -> DEFAULT
Rule 211   TypeSwitchStmt -> SWITCH SimpleStmtOpt TypeSwitchGuard LEFT_BRACES TypeCaseClauseOpt RIGHT_BRACES
Rule 212   TypeSwitchGuard -> IdentifierOpt PrimaryExpr DOT LEFT_PARANTHESIS TYPE RIGHT_PARANTHESIS
Rule 213   IdentifierOpt -> IDENTIFIER QUICK_ASSIGN
Rule 214   IdentifierOpt -> epsilon
Rule 215   TypeCaseClauseOpt -> TypeCaseClauseOpt TypeCaseClause
Rule 216   TypeCaseClauseOpt -> epsilon
Rule 217   TypeCaseClause -> TypeSwitchCase COLON StatementList
Rule 218   TypeSwitchCase -> CASE TypeList
Rule 219   TypeSwitchCase -> DEFAULT
Rule 220   TypeList -> Type TypeRep
Rule 221   TypeRep -> TypeRep COMMA Type
Rule 222   TypeRep -> epsilon
Rule 223   ForStmt -> FOR CreateScope ConditionBlockOpt Block EndScope
Rule 224   ConditionBlockOpt -> epsilon
Rule 225   ConditionBlockOpt -> Condition
Rule 226   ConditionBlockOpt -> ForClause
Rule 227   Condition -> Expression
Rule 228   ForClause -> SimpleStmt SEMICOLON ConditionOpt SEMICOLON SimpleStmt
Rule 229   ConditionOpt -> epsilon
Rule 230   ConditionOpt -> Condition
Rule 231   ExpressionIdentListOpt -> epsilon
Rule 232   ExpressionIdentListOpt -> ExpressionIdentifier
Rule 233   ExpressionIdentifier -> ExpressionList ASSIGN
Rule 234   ReturnStmt -> RETURN ExpressionListPureOpt
Rule 235   ExpressionListPureOpt -> ExpressionList
Rule 236   ExpressionListPureOpt -> epsilon
Rule 237   BreakStmt -> BREAK LabelOpt
Rule 238   ContinueStmt -> CONTINUE LabelOpt
Rule 239   LabelOpt -> Label
Rule 240   LabelOpt -> epsilon
Rule 241   GotoStmt -> GOTO Label
Rule 242   SourceFile -> PackageClause SEMICOLON ImportDeclRep TopLevelDeclRep
Rule 243   ImportDeclRep -> epsilon
Rule 244   ImportDeclRep -> ImportDeclRep ImportDecl SEMICOLON
Rule 245   TopLevelDeclRep -> TopLevelDeclRep TopLevelDecl SEMICOLON
Rule 246   TopLevelDeclRep -> epsilon
Rule 247   PackageClause -> PACKAGE PackageName
Rule 248   PackageName -> IDENTIFIER
Rule 249   ImportDecl -> IMPORT ImportSpec
Rule 250   ImportDecl -> IMPORT LEFT_PARANTHESIS ImportSpecRep RIGHT_PARANTHESIS
Rule 251   ImportSpecRep -> ImportSpecRep ImportSpec SEMICOLON
Rule 252   ImportSpecRep -> epsilon
Rule 253   ImportSpec -> PackageNameDotOpt ImportPath
Rule 254   PackageNameDotOpt -> DOT
Rule 255   PackageNameDotOpt -> PackageName
Rule 256   PackageNameDotOpt -> epsilon
Rule 257   ImportPath -> STRING
Rule 258   epsilon -> <empty>

Terminals, with rules where they appear

ADD                  : 151
AND                  : 154
AND_ASSIGN           : 190
ASSIGN               : 62 63 76 83 84 195 233
BOOL_T               : 12
BREAK                : 237
CASE                 : 209 218
COLON                : 122 123 123 178 208 217
COMMA                : 45 46 66 69 172 221
COMPLEX_T            : 10
CONST                : 58 59
CONTINUE             : 238
DEC                  : 182
DEFAULT              : 210 219
DIV                  : 147
DIV_ASSIGN           : 188
DOT                  : 111 120 124 212 254
ELSE                 : 199 200
EQ                   : 138
FLOAT                : 102
FLOAT_T              : 8
FOR                  : 223
FUNC                 : 87 88
GEQ                  : 143
GOTO                 : 241
GT                   : 141
HEX                  : 23 101
IDENTIFIER           : 14 65 66 76 77 86 92 110 111 120 179 213 248
IF                   : 196
IMAGINARY            : 103
IMPORT               : 249 250
INC                  : 181
INTEGER              : 21 99
INT_T                : 7
LEFT_BRACES          : 26 49 204 211
LEFT_BRACKET         : 20 115 121 122 123
LEFT_PARANTHESIS     : 4 40 59 72 79 97 118 124 155 172 212 250
LEQ                  : 142
LOG_AND              : 135
LOG_OR               : 134
LSHIFT               : 149
LSHIFT_ASSIGN        : 193
LT                   : 140
MALLOC               : 172
MINUS_ASSIGN         : 186
MOD                  : 148
MOD_ASSIGN           : 189
MULT                 : 33 119 153
MULT_ASSIGN          : 187
NEQ                  : 139
NOT                  : 133
OCTAL                : 22 100
OR                   : 145
OR_ASSIGN            : 191
PACKAGE              : 247
PLUS_ASSIGN          : 185
PRINT                : 170
QUICK_ASSIGN         : 86 213
RANGE                : 
RETURN               : 234
RIGHT_BRACES         : 26 49 204 211
RIGHT_BRACKET        : 20 115 121 122 123
RIGHT_PARANTHESIS    : 4 40 59 72 79 97 118 124 155 172 212 250
RSHIFT               : 150
RSHIFT_ASSIGN        : 194
RUNE                 : 24 104
RUNE_T               : 11
SCAN                 : 171
SEMICOLON            : 27 51 60 73 80 197 228 228 242 244 245 251
STRING               : 32 105 257
STRING_T             : 13
STRUCT               : 26
SUB                  : 152
SWITCH               : 204 211
TYPE                 : 14 71 72 212
TYPECAST             : 155
UINT_T               : 9
VAR                  : 78 79
XOR                  : 146
XOR_ASSIGN           : 192
error                : 

Nonterminals, with rules where they appear

AddMulOp             : 137
AliasDecl            : 
ArrayLength          : 20
ArrayType            : 15
AssignOp             : 184
Assignment           : 176
BaseType             : 33
BasicLit             : 98
BinaryOp             : 128
Block                : 94 160 196 200 223
BreakStmt            : 162
C                    : 103
Condition            : 225 230
ConditionBlockOpt    : 223
ConditionOpt         : 228
ConstDecl            : 53
ConstSpec            : 58 60
ConstSpecRep         : 59 60
ContinueStmt         : 163
Conversion           : 114
CreateFuncScope      : 26
CreateScope          : 87 88 160 196 200 223
Declaration          : 56 156
ElementType          : 20
ElseOpt              : 196
EndScope             : 26 87 88 160 196 200 223
ExprCaseClause       : 206
ExprCaseClauseRep    : 204 206
ExprSwitchCase       : 208
ExprSwitchStmt       : 202
Expression           : 68 69 86 97 115 121 123 123 128 128 129 155 170 171 172 172 180 181 182 196 227
ExpressionIdentListOpt : 
ExpressionIdentifier : 232
ExpressionList       : 62 63 83 84 125 183 183 209 233 235
ExpressionListOpt    : 82
ExpressionListPureOpt : 234
ExpressionListTypeOpt : 118
ExpressionOpt        : 122 122 123 204
ExpressionRep        : 68 69
ExpressionStmt       : 174
F                    : 102
FieldDecl            : 27
FieldDeclRep         : 26 27
ForClause            : 226
ForStmt              : 169
Function             : 87
FunctionBody         : 93
FunctionDecl         : 57
FunctionName         : 87 88
GotoStmt             : 164
I                    : 21 22 23 24 99 100 101 104
IdentifierList       : 29 47 62 82 83
IdentifierOpt        : 212
IdentifierRep        : 65 66
IfStmt               : 166 199
ImportDecl           : 244
ImportDeclRep        : 242 244
ImportPath           : 253
ImportSpec           : 249 251
ImportSpecRep        : 250 251
IncDecStmt           : 175
Index                : 
Label                : 178 239 241
LabelOpt             : 237 238
LabeledStmt          : 157
Literal              : 95
MallocStmt           : 168
Operand              : 112
OperandName          : 96
PackageClause        : 242
PackageName          : 247 255
PackageNameDotOpt    : 253
ParameterDecl        : 43 45 46 46
ParameterDeclCommaRep : 44 45
ParameterListOpt     : 40
Parameters           : 35 38
ParametersList       : 41
PointerType          : 17
PrimaryExpr          : 113 115 116 117 118 119 131 212
PrintStmt            : 165
QualifiedIdent       : 6
RelOp                : 136
Result               : 36
ResultOpt            : 
ReturnStmt           : 159
S                    : 105
ScanStmt             : 161
Selector             : 113
ShortVarDecl         : 177
Signature            : 88 93
SimpleStmt           : 158 197 228 228
SimpleStmtOpt        : 211
Slice                : 116
SourceFile           : 1
StartSwitch          : 
Statement            : 51 178
StatementList        : 49 208 217
StatementRep         : 50 51
StructType           : 16
SwitchStmt           : 167
Tag                  : 30
TagOpt               : 
TopLevelDecl         : 245
TopLevelDeclRep      : 242 245
Type                 : 4 18 25 29 34 39 47 48 62 76 77 82 124 155 220 221
TypeAssertion        : 117
TypeCaseClause       : 215
TypeCaseClauseOpt    : 211 215
TypeDecl             : 54
TypeDef              : 75
TypeExprListOpt      : 
TypeList             : 218
TypeLit              : 3
TypeName             : 2 111
TypeOpt              : 35 63
TypeRep              : 220 221
TypeSpec             : 71 73
TypeSpecRep          : 72 73
TypeSwitchCase       : 217
TypeSwitchGuard      : 211
TypeSwitchStmt       : 203
TypeToken            : 5
UnaryExpr            : 127 132 133
UnaryOp              : 132 144
VarDecl              : 55
VarSpec              : 78 80
VarSpecRep           : 79 80
assign_op            : 183
epsilon              : 19 28 31 37 42 52 61 64 67 70 74 81 85 126 130 173 198 201 207 214 216 222 224 229 231 236 240 243 246 252 256
start                : 0

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . SourceFile
    (242) SourceFile -> . PackageClause SEMICOLON ImportDeclRep TopLevelDeclRep
    (247) PackageClause -> . PACKAGE PackageName

    PACKAGE         shift and go to state 4

    start                          shift and go to state 1
    SourceFile                     shift and go to state 2
    PackageClause                  shift and go to state 3

state 1

    (0) S' -> start .



state 2

    (1) start -> SourceFile .

    $end            reduce using rule 1 (start -> SourceFile .)


state 3

    (242) SourceFile -> PackageClause . SEMICOLON ImportDeclRep TopLevelDeclRep

    SEMICOLON       shift and go to state 5


state 4

    (247) PackageClause -> PACKAGE . PackageName
    (248) PackageName -> . IDENTIFIER

    IDENTIFIER      shift and go to state 7

    PackageName                    shift and go to state 6

state 5

    (242) SourceFile -> PackageClause SEMICOLON . ImportDeclRep TopLevelDeclRep
    (243) ImportDeclRep -> . epsilon
    (244) ImportDeclRep -> . ImportDeclRep ImportDecl SEMICOLON
    (258) epsilon -> .

    IMPORT          reduce using rule 258 (epsilon -> .)
    FUNC            reduce using rule 258 (epsilon -> .)
    CONST           reduce using rule 258 (epsilon -> .)
    TYPE            reduce using rule 258 (epsilon -> .)
    VAR             reduce using rule 258 (epsilon -> .)
    $end            reduce using rule 258 (epsilon -> .)

    ImportDeclRep                  shift and go to state 8
    epsilon                        shift and go to state 9

state 6

    (247) PackageClause -> PACKAGE PackageName .

    SEMICOLON       reduce using rule 247 (PackageClause -> PACKAGE PackageName .)


state 7

    (248) PackageName -> IDENTIFIER .

    SEMICOLON       reduce using rule 248 (PackageName -> IDENTIFIER .)
    STRING          reduce using rule 248 (PackageName -> IDENTIFIER .)


state 8

    (242) SourceFile -> PackageClause SEMICOLON ImportDeclRep . TopLevelDeclRep
    (244) ImportDeclRep -> ImportDeclRep . ImportDecl SEMICOLON
    (245) TopLevelDeclRep -> . TopLevelDeclRep TopLevelDecl SEMICOLON
    (246) TopLevelDeclRep -> . epsilon
    (249) ImportDecl -> . IMPORT ImportSpec
    (250) ImportDecl -> . IMPORT LEFT_PARANTHESIS ImportSpecRep RIGHT_PARANTHESIS
    (258) epsilon -> .

    IMPORT          shift and go to state 13
    FUNC            reduce using rule 258 (epsilon -> .)
    CONST           reduce using rule 258 (epsilon -> .)
    TYPE            reduce using rule 258 (epsilon -> .)
    VAR             reduce using rule 258 (epsilon -> .)
    $end            reduce using rule 258 (epsilon -> .)

    TopLevelDeclRep                shift and go to state 10
    ImportDecl                     shift and go to state 11
    epsilon                        shift and go to state 12

state 9

    (243) ImportDeclRep -> epsilon .

    IMPORT          reduce using rule 243 (ImportDeclRep -> epsilon .)
    FUNC            reduce using rule 243 (ImportDeclRep -> epsilon .)
    CONST           reduce using rule 243 (ImportDeclRep -> epsilon .)
    TYPE            reduce using rule 243 (ImportDeclRep -> epsilon .)
    VAR             reduce using rule 243 (ImportDeclRep -> epsilon .)
    $end            reduce using rule 243 (ImportDeclRep -> epsilon .)


state 10

    (242) SourceFile -> PackageClause SEMICOLON ImportDeclRep TopLevelDeclRep .
    (245) TopLevelDeclRep -> TopLevelDeclRep . TopLevelDecl SEMICOLON
    (56) TopLevelDecl -> . Declaration
    (57) TopLevelDecl -> . FunctionDecl
    (53) Declaration -> . ConstDecl
    (54) Declaration -> . TypeDecl
    (55) Declaration -> . VarDecl
    (87) FunctionDecl -> . FUNC FunctionName CreateScope Function EndScope
    (88) FunctionDecl -> . FUNC FunctionName CreateScope Signature EndScope
    (58) ConstDecl -> . CONST ConstSpec
    (59) ConstDecl -> . CONST LEFT_PARANTHESIS ConstSpecRep RIGHT_PARANTHESIS
    (71) TypeDecl -> . TYPE TypeSpec
    (72) TypeDecl -> . TYPE LEFT_PARANTHESIS TypeSpecRep RIGHT_PARANTHESIS
    (78) VarDecl -> . VAR VarSpec
    (79) VarDecl -> . VAR LEFT_PARANTHESIS VarSpecRep RIGHT_PARANTHESIS

    $end            reduce using rule 242 (SourceFile -> PackageClause SEMICOLON ImportDeclRep TopLevelDeclRep .)
    FUNC            shift and go to state 20
    CONST           shift and go to state 21
    TYPE            shift and go to state 22
    VAR             shift and go to state 23

    TopLevelDecl                   shift and go to state 14
    Declaration                    shift and go to state 15
    FunctionDecl                   shift and go to state 16
    ConstDecl                      shift and go to state 17
    TypeDecl                       shift and go to state 18
    VarDecl                        shift and go to state 19

state 11

    (244) ImportDeclRep -> ImportDeclRep ImportDecl . SEMICOLON

    SEMICOLON       shift and go to state 24


state 12

    (246) TopLevelDeclRep -> epsilon .

    FUNC            reduce using rule 246 (TopLevelDeclRep -> epsilon .)
    CONST           reduce using rule 246 (TopLevelDeclRep -> epsilon .)
    TYPE            reduce using rule 246 (TopLevelDeclRep -> epsilon .)
    VAR             reduce using rule 246 (TopLevelDeclRep -> epsilon .)
    $end            reduce using rule 246 (TopLevelDeclRep -> epsilon .)


state 13

    (249) ImportDecl -> IMPORT . ImportSpec
    (250) ImportDecl -> IMPORT . LEFT_PARANTHESIS ImportSpecRep RIGHT_PARANTHESIS
    (253) ImportSpec -> . PackageNameDotOpt ImportPath
    (254) PackageNameDotOpt -> . DOT
    (255) PackageNameDotOpt -> . PackageName
    (256) PackageNameDotOpt -> . epsilon
    (248) PackageName -> . IDENTIFIER
    (258) epsilon -> .

    LEFT_PARANTHESIS shift and go to state 26
    DOT             shift and go to state 28
    IDENTIFIER      shift and go to state 7
    STRING          reduce using rule 258 (epsilon -> .)

    ImportSpec                     shift and go to state 25
    PackageNameDotOpt              shift and go to state 27
    PackageName                    shift and go to state 29
    epsilon                        shift and go to state 30

state 14

    (245) TopLevelDeclRep -> TopLevelDeclRep TopLevelDecl . SEMICOLON

    SEMICOLON       shift and go to state 31


state 15

    (56) TopLevelDecl -> Declaration .

    SEMICOLON       reduce using rule 56 (TopLevelDecl -> Declaration .)


state 16

    (57) TopLevelDecl -> FunctionDecl .

    SEMICOLON       reduce using rule 57 (TopLevelDecl -> FunctionDecl .)


state 17

    (53) Declaration -> ConstDecl .

    SEMICOLON       reduce using rule 53 (Declaration -> ConstDecl .)


state 18

    (54) Declaration -> TypeDecl .

    SEMICOLON       reduce using rule 54 (Declaration -> TypeDecl .)


state 19

    (55) Declaration -> VarDecl .

    SEMICOLON       reduce using rule 55 (Declaration -> VarDecl .)


state 20

    (87) FunctionDecl -> FUNC . FunctionName CreateScope Function EndScope
    (88) FunctionDecl -> FUNC . FunctionName CreateScope Signature EndScope
    (92) FunctionName -> . IDENTIFIER

    IDENTIFIER      shift and go to state 33

    FunctionName                   shift and go to state 32

state 21

    (58) ConstDecl -> CONST . ConstSpec
    (59) ConstDecl -> CONST . LEFT_PARANTHESIS ConstSpecRep RIGHT_PARANTHESIS
    (62) ConstSpec -> . IdentifierList Type ASSIGN ExpressionList
    (65) IdentifierList -> . IDENTIFIER IdentifierRep

    LEFT_PARANTHESIS shift and go to state 35
    IDENTIFIER      shift and go to state 37

    ConstSpec                      shift and go to state 34
    IdentifierList                 shift and go to state 36

state 22

    (71) TypeDecl -> TYPE . TypeSpec
    (72) TypeDecl -> TYPE . LEFT_PARANTHESIS TypeSpecRep RIGHT_PARANTHESIS
    (75) TypeSpec -> . TypeDef
    (77) TypeDef -> . IDENTIFIER Type

    LEFT_PARANTHESIS shift and go to state 39
    IDENTIFIER      shift and go to state 41

    TypeSpec                       shift and go to state 38
    TypeDef                        shift and go to state 40

state 23

    (78) VarDecl -> VAR . VarSpec
    (79) VarDecl -> VAR . LEFT_PARANTHESIS VarSpecRep RIGHT_PARANTHESIS
    (82) VarSpec -> . IdentifierList Type ExpressionListOpt
    (83) VarSpec -> . IdentifierList ASSIGN ExpressionList
    (65) IdentifierList -> . IDENTIFIER IdentifierRep

    LEFT_PARANTHESIS shift and go to state 43
    IDENTIFIER      shift and go to state 37

    VarSpec                        shift and go to state 42
    IdentifierList                 shift and go to state 44

state 24

    (244) ImportDeclRep -> ImportDeclRep ImportDecl SEMICOLON .

    IMPORT          reduce using rule 244 (ImportDeclRep -> ImportDeclRep ImportDecl SEMICOLON .)
    FUNC            reduce using rule 244 (ImportDeclRep -> ImportDeclRep ImportDecl SEMICOLON .)
    CONST           reduce using rule 244 (ImportDeclRep -> ImportDeclRep ImportDecl SEMICOLON .)
    TYPE            reduce using rule 244 (ImportDeclRep -> ImportDeclRep ImportDecl SEMICOLON .)
    VAR             reduce using rule 244 (ImportDeclRep -> ImportDeclRep ImportDecl SEMICOLON .)
    $end            reduce using rule 244 (ImportDeclRep -> ImportDeclRep ImportDecl SEMICOLON .)


state 25

    (249) ImportDecl -> IMPORT ImportSpec .

    SEMICOLON       reduce using rule 249 (ImportDecl -> IMPORT ImportSpec .)


state 26

    (250) ImportDecl -> IMPORT LEFT_PARANTHESIS . ImportSpecRep RIGHT_PARANTHESIS
    (251) ImportSpecRep -> . ImportSpecRep ImportSpec SEMICOLON
    (252) ImportSpecRep -> . epsilon
    (258) epsilon -> .

    RIGHT_PARANTHESIS reduce using rule 258 (epsilon -> .)
    DOT             reduce using rule 258 (epsilon -> .)
    IDENTIFIER      reduce using rule 258 (epsilon -> .)
    STRING          reduce using rule 258 (epsilon -> .)

    ImportSpecRep                  shift and go to state 45
    epsilon                        shift and go to state 46

state 27

    (253) ImportSpec -> PackageNameDotOpt . ImportPath
    (257) ImportPath -> . STRING

    STRING          shift and go to state 48

    ImportPath                     shift and go to state 47

state 28

    (254) PackageNameDotOpt -> DOT .

    STRING          reduce using rule 254 (PackageNameDotOpt -> DOT .)


state 29

    (255) PackageNameDotOpt -> PackageName .

    STRING          reduce using rule 255 (PackageNameDotOpt -> PackageName .)


state 30

    (256) PackageNameDotOpt -> epsilon .

    STRING          reduce using rule 256 (PackageNameDotOpt -> epsilon .)


state 31

    (245) TopLevelDeclRep -> TopLevelDeclRep TopLevelDecl SEMICOLON .

    FUNC            reduce using rule 245 (TopLevelDeclRep -> TopLevelDeclRep TopLevelDecl SEMICOLON .)
    CONST           reduce using rule 245 (TopLevelDeclRep -> TopLevelDeclRep TopLevelDecl SEMICOLON .)
    TYPE            reduce using rule 245 (TopLevelDeclRep -> TopLevelDeclRep TopLevelDecl SEMICOLON .)
    VAR             reduce using rule 245 (TopLevelDeclRep -> TopLevelDeclRep TopLevelDecl SEMICOLON .)
    $end            reduce using rule 245 (TopLevelDeclRep -> TopLevelDeclRep TopLevelDecl SEMICOLON .)


state 32
